# lodestar

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  LICENSE  NOTICE.md  QUICK-REFERENCE.md  README.md  STYLE-GUIDE.md  conftest.py  passenger_wsgi.py  pyproject.toml  requirements-lean.txt  requirements.txt
.claude/: CLAUDE.md
.github/workflows/: ci.yml
assets/: README.md
competitions/: README.md
competitions/hp-fowa-2024/: README.md
data/: README.md  knowledge.json
docs/: ai-methodology.md  architecture.md  decisions.md  demo.tape  deploy.md  ibm-curriculum-mapping.md  mcp.md  media-guide.md  privacy-policy.md  reference-vs-product.md  roadmap.md  security.md
evals/: __init__.py  rubric.md  runner.py
evals/runs/: eval-20260525233729.json
portfolio/: case-study.md
product/: README.md
product/ignite-ai/: conversation-starters.md  instructions.md
src/ignite/: __init__.py  app.py  chatbot.py  cli.py  mcp_server.py  responder.py
src/ignite/agents/: __init__.py  agent.py  router.py  tools.py
src/ignite/prompts/: __init__.py  system.py
src/ignite/providers/: __init__.py  anthropic.py  base.py  config.py  mock.py  openai.py
src/ignite/retrieval/: base.py  hybrid.py  knowledge.py  sparse.py  vector_store.py
src/lodestar/: __init__.py  app.py  chatbot.py  cli.py  knowledge.py  mcp_server.py  privacy.py  prompt.py  responder.py  safety.py  web.py  wsgi.py
src/lodestar/agents/: agent.py  tools.py
src/lodestar/prompts/: __init__.py  system.py
src/lodestar/providers/: anthropic.py  base.py  config.py  mock.py  openai.py
src/lodestar/retrieval/: __init__.py  embed.py  hybrid.py  knowledge.py  sparse.py  vector_store.py
src/lodestar/static/: index.html
tests/: test_chatbot.py  test_evals.py  test_ignite_agent.py  test_ignite_chatbot.py  test_ignite_hybrid.py  test_ignite_integration.py  test_ignite_knowledge.py  test_ignite_mcp.py  test_ignite_privacy.py  test_ignite_providers.py  test_ignite_responder.py  test_ignite_retrieval.py  test_ignite_router.py  test_ignite_safety.py  test_ignite_tools.py  test_integration.py  test_knowledge.py  test_lodestar_agent.py  test_lodestar_hybrid.py  test_lodestar_integration.py  test_lodestar_mcp.py  test_lodestar_providers.py  test_lodestar_responder.py  test_lodestar_retrieval.py  test_lodestar_router.py  test_lodestar_safety.py  test_lodestar_tools.py  test_lodestar_web.py  test_lodestar_wsgi.py  test_privacy.py
