[project]
name = "lodestar"
version = "0.1.0"
description = "Reference implementation of IgniteAI — an HBCU student career-advice chatbot (HP FOWA 2024, first place)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Wolfgang Sanyer", email = "wolfgang.sanyer@gmail.com" },
]
maintainers = [
    { name = "Wolfgang Sanyer", email = "wolfgang.sanyer@gmail.com" },
]
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
]

[project.scripts]
lodestar = "lodestar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lodestar"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "_staging"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "unit: Unit tests for pure functions and business logic",
    "contract: Contract tests that verify external API assumptions",
    "integration: End-to-end tests that call the live OpenAI API",
]
minversion = "7.0"
