[project]
name = "lodestar"
version = "0.1.0"
description = "Lodestar — a 2026 agentic, RAG-grounded HBCU career-advice assistant (model-agnostic, hybrid RAG, MCP server), evolved from the first-place HP FOWA 2024 IgniteAI custom GPT."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Wolfgang Sanyer", email = "wolfgang.sanyer@gmail.com" },
]
maintainers = [
    { name = "Wolfgang Sanyer", email = "wolfgang.sanyer@gmail.com" },
]
dependencies = [
    "python-dotenv>=1.0",
    "cryptography>=42.0",
    # Lodestar rebuild (src/lodestar): model-agnostic (Claude default), RAG, MCP, web
    "anthropic>=0.40",
    "mcp>=1.0",
    "lancedb>=0.13",
    "fastembed>=0.4",
    "rank-bm25>=0.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "flask>=3.0",
    # IgniteAI reproduction (src/ignite): the 2024 original was OpenAI-based
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
]

[project.scripts]
lodestar = "lodestar.cli:main"
lodestar-web = "lodestar.web:main"
ignite = "ignite.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lodestar", "src/ignite"]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = [".venv", "_staging"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "unit: Unit tests for pure functions and business logic",
    "contract: Contract tests that verify external API assumptions",
    "integration: End-to-end tests that call the live OpenAI API",
]
minversion = "7.0"
